--- a/src/Libraries/RevitNodes/Properties/Resources.resx
+++ b/src/Libraries/RevitNodes/Properties/Resources.resx
@@ -465,6 +465,9 @@
   <data name="NonIntersectingElements" xml:space="preserve">
     <value>Elements are not intersecting</value>
   </data>
+  <data name="NotPlanView" xml:space="preserve">
+    <value>The provided input view is not a plan view.</value>
+  </data>
   <data name="InvalidGroupType" xml:space="preserve">
     <value>{0} is not a valid GroupType.</value>
   </data>
