add FamilyDocument.Type and FamilyType to set/get parameters + tests

--- a/src/Libraries/RevitNodes/Properties/Resources.resx
+++ b/src/Libraries/RevitNodes/Properties/Resources.resx
@@ -483,4 +483,7 @@
   <data name="DocumentNotFamilyDocument" xml:space="preserve">
     <value>Document is not a valid Family Document.</value>
   </data>
+  <data name="FamilyTypeDoesNotExist" xml:space="preserve">
+    <value>Family type does not exist in the document.</value>
+  </data>
 </root>
