--- a/src/Libraries/RevitNodes/Properties/Resources.resx
+++ b/src/Libraries/RevitNodes/Properties/Resources.resx
@@ -465,6 +465,12 @@
   <data name="NonIntersectingElements" xml:space="preserve">
     <value>Elements are not intersecting</value>
   </data>
+  <data name="EmptyView" xml:space="preserve">
+    <value>Cannot place empty view on sheet.</value>
+  </data>
+  <data name="ViewAlreadyPlacedOnSheet" xml:space="preserve">
+    <value>Cannot place view on sheet as it is already on a sheet.</value>
+  </data>
   <data name="NotPlanView" xml:space="preserve">
     <value>The provided input view is not a plan view.</value>
   </data>
