Family document nodes (#2490)
* FamilyDocument node

* FamilyDocument class + nodes

* Create FamilyParameter wrapper

* FamilyDocument tests

* small updates

* node name changes

* comment updates

* Update FamilyDocument.cs

* Familyparameter icons

* Update Family.cs

* add FamilyDocument.Type and FamilyType to set/get parameters + tests

* update tests

* Update RevitNodesImages.resx

--- a/src/Libraries/RevitNodes/Properties/Resources.en-US.resx
+++ b/src/Libraries/RevitNodes/Properties/Resources.en-US.resx
@@ -471,4 +471,13 @@
   <data name="NoElementsToPurge" xml:space="preserve">
     <value>No Elements to purge in the current document.</value>
   </data>
+  <data name="WrongStorageType" xml:space="preserve">
+    <value>Input value for this parameter needs to be of type {0}.</value>
+  </data>
+  <data name="DocumentNotFamilyDocument" xml:space="preserve">
+    <value>Document is not a valid Family Document.</value>
+  </data>
+  <data name="FamilyTypeDoesNotExist" xml:space="preserve">
+    <value>Family type does not exist in the document.</value>
+  </data>
 </root>
