Added LongestOfShortestExitPaths Node

--- a/src/Libraries/RevitNodes/Properties/Resources.en-US.resx
+++ b/src/Libraries/RevitNodes/Properties/Resources.en-US.resx
@@ -480,4 +480,7 @@
   <data name="FamilyTypeDoesNotExist" xml:space="preserve">
     <value>Family type does not exist in the document.</value>
   </data>
+  <data name="RoomsForLongestPathNotFound" xml:space="preserve">
+    <value>Cannot find Rooms for longest path computaion</value>
+  </data>
 </root>
