--- a/src/DynamoRevitIcons/RevitNodesImages.resx
+++ b/src/DynamoRevitIcons/RevitNodesImages.resx
@@ -10515,6 +10515,42 @@
         AElFTkSuQmCC
 </value>
     </data>
+    <data name="Revit.Elements.PathOfTravel.LongestOfShortestExitPaths.Large" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+        <value>
+        iVBORw0KGgoAAAANSUhEUgAAAGAAAABgCAYAAADimHc4AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wwAADsMBx2+oZAAABA9JREFUeF7tnM1tVEEQhPeEyIAY4EYeEA3ciIIzBMIdQQ5LFpwBwQzulcvFvLfV
+        8+bPS3/SJ4Ttbmq6hAAfOAVBEARBEATI+Xz+HbbTzqpTWhLWa2fVKS0J67Wz6uBw4rSSK2dDMaedVQeH
+        efFsV86GYk47qw4O49I3X/JPH/5Co93KtrJuSo/Mx794+dgMS9keizKlR2IBM0soZVtdN1uPjALqdbH1
+        SCxgVglb2VbWzd4jo4A6Xew9EguYUcJetpV1ce2RUYBPN9ceiQWMLuFatlV1oTwyCtB1ozwSCxhZgpJt
+        Nd2oj4wCNN2oj8QCRpWgZltJN55HKgWkzz0tfbxGT7ZVdON5JBawV0IrPdlW0Y36yHTwl/ZjFEBiTjur
+        Dg7z4pJYQO8SvNlmiTntrDo4zIu3jAIeijntrDo4zIu3xAJ6llCTbYaY086qg8O8eM8o4F7MaWfVwWFe
+        vCcW0KuE2myjxZx2Vh0c5sXXjALuxJx2Vh0c5sWKPUs4mm2UmNPOqoPDvFgxCphcQLZXCS2yjRBz2ll1
+        cJgXq0YB9zntrDo4zIs99iihVbbeYk47qw4O82KPUcCddlYdHObFXluX0DJbTzGnnVUHh3mx1yhgcgHZ
+        liW0ztZLzGln1cFhXlxjFOAEh3lxra1K6JGth5jTzqqDw7y41ijAAQ7z4iO2KKFXttZiTjurDg7z4iNG
+        ASI4zIuPerSEntlaijntrDo4zIuPGgUI4DAvbuGREnpnayXmtLPq4DAvbmEUcAUc5sWtrC1hRLYWYk47
+        qw4O8+JWYgGeEkZkayHmtLPq4DAvbmkUsAEO8+KWYgFqCaOyHRVz2ll1cJgXtzYKKIDDvLi1WIBSwshs
+        R8ScdlYdHObFPYwCCBzmxT3EAq6VMDpbrZjTzqqDw7y4l1EAgMO8uJdYwF4JM7LViDntrDo4zIt7GgUY
+        OMyLe4oFbJUwK5tXzGln1cFhXtzbKCCBw7y4t1hAqYSZ2TxiTjurDg7z4hFGATDMi0eIBXAJs7OpYk47
+        qw4O8+JRPvYCUDcrPBILwBJWyObVzSqPLBUw25Tlc/Lvf9Gg6mbFArL4uVlall/JD8lnpa9h3axSQNYe
+        vFoBF78n3yaflL6WlVm1gCx+boacx/yWfFX6+osuViogi4/Fj88QsxT8lHxemnOxcgFZ/NxoOUvBH8n3
+        POditQKy9Mjlfff1Z4p9l91NFNDOnN3NigVkSw9c1Zv7HbCKpWOT//wZ4CYK2JaOzea/Bb3gGTdRwLZ0
+        8Iv53wGvS19/0UUUsC0d/vb/Jbyadvj8vaCPSel7QVkXUcC26ej/z3dDb0U3UcBx8YZ2Vh0c5sWhJt7Q
+        zqqDw+Fx7aw6pSVhvXZWndKSsF47axAEQRAEQZA4nf4AHvYjYXlCWgEAAAAASUVORK5CYII=
+</value>
+    </data>
+    <data name="Revit.Elements.PathOfTravel.LongestOfShortestExitPaths.Small" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+        <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wwAADsMBx2+oZAAAAZhJREFUWEftlqFOxEAQhisQSEgQSAQSgUAikMgTOAQIBKg72gocvAFB8QhIHqGi
+        7RGCQJIGiUDAM+zw/9DNbbZb0jbdNTDJl97O3u78mZ2dbPRv2qqqkpDUYRdGJyy6zGSJ3y7oNX1pFYDg
+        y0mhJM5kzbXQZqgA0jC9WVwqSUq5Mv/chhcBCC5xod6YDXOBCy8CCI7hHpzqcRveBMwKtQMBr3rchjcB
+        BLWQxaVMTJ+NZwEySUqVmz6boQK4rg67MNdmOIaXOJdd26/xLgC34YQFafs13gXwKkLE+/lcbdpzxLsA
+        glq4QEHeuuaCCJhmsoJi/EgfZd2eCyKA4BiuXe05mIDpg2wwC3Z7DiaAIAt36VzNTF9QAWkh22zP5nsh
+        qADC9oyjONDj4ALQD/Yh4EmPgwsgyMJzkssefw8VQBrWWUAhx7+1Zxe4wofgBqxqX8O6CmARsj3jKLZc
+        8y4Q+AjwqfcJzuhrWJ90/mz2/XYcBPdoWB8BbM/8dnk3EgQdNwOka3CCoOPVwBgwVh12YXSGpA775y2K
+        vgADJ1YhIB2MPAAAAABJRU5ErkJggg==
+</value>
+    </data>
     <data name="Revit.Elements.PathOfTravel.Update.Large" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
         <value>
         iVBORw0KGgoAAAANSUhEUgAAAGAAAABgCAYAAADimHc4AAAABGdBTUEAALGPC/xhBQAABj1JREFUeF7t
