--- a/src/Libraries/RevitNodes/Properties/Resources.en-US.resx
+++ b/src/Libraries/RevitNodes/Properties/Resources.en-US.resx
@@ -471,6 +471,9 @@
   <data name="NoElementsToPurge" xml:space="preserve">
     <value>No Elements to purge in the current document.</value>
   </data>
+  <data name="InvalidElementId" xml:space="preserve">
+    <value>Id is not a valid ElementId, GUID, string or int.</value>
+  </data>
   <data name="WrongStorageType" xml:space="preserve">
     <value>Input value for this parameter needs to be of type {0}.</value>
   </data>
