Added LongestOfShortestExitPaths Node (#2517)
* Added LongestOfShortestExitPaths Node

* Warning message changed. Test scenario added

* Added system tests and integration test

--- a/src/Libraries/RevitNodes/Properties/Resources.en-US.resx
+++ b/src/Libraries/RevitNodes/Properties/Resources.en-US.resx
@@ -483,4 +483,7 @@
   <data name="FamilyTypeDoesNotExist" xml:space="preserve">
     <value>Family type does not exist in the document.</value>
   </data>
+  <data name="RoomsForLongestPathNotFound" xml:space="preserve">
+    <value>Rooms are required to compute longest Paths of Travel.</value>
+  </data>
 </root>
