Add Get Remove Insert and Set waypoints nodes on a PathOfTravel element. Rework PathOfTravel nodes icons.

--- a/src/Libraries/RevitNodes/Properties/Resources.en-US.resx
+++ b/src/Libraries/RevitNodes/Properties/Resources.en-US.resx
@@ -486,4 +486,7 @@
   <data name="RoomsForLongestPathNotFound" xml:space="preserve">
     <value>Rooms are required to compute longest Paths of Travel.</value>
   </data>
+  <data name="InvalidPathOfTravel" xml:space="preserve">
+    <value>Invalid PathOfTravel element.</value>
+  </data>
 </root>
