Add Get Remove Insert and Set waypoints nodes on a PathOfTravel eleme… (#2549)
* Add Get Remove Insert and Set waypoints nodes on a PathOfTravel element. Rework PathOfTravel nodes icons.

* Code review for convention naming in comments

--- a/src/Libraries/RevitNodes/Properties/Resources.en-US.resx
+++ b/src/Libraries/RevitNodes/Properties/Resources.en-US.resx
@@ -486,6 +486,9 @@
   <data name="RoomsForLongestPathNotFound" xml:space="preserve">
     <value>Rooms are required to compute longest Paths of Travel.</value>
   </data>
+  <data name="InvalidPathOfTravel" xml:space="preserve">
+    <value>Invalid PathOfTravel element.</value>
+  </data>
   <data name="CloseInputPolyCurveError" xml:space="preserve">
     <value>The input PolyCurve is closed.</value>
   </data>
